WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310369
[Site Isolation] Dynamically created cross-site iframes should not add back/forward list entries
https://bugs.webkit.org/show_bug.cgi?id=310369
Summary
[Site Isolation] Dynamically created cross-site iframes should not add back/f...
Basuke Suzuki
Reported
2026-03-20 09:53:39 PDT
[Site Isolation] Dynamically created cross-site iframes should not add back/forward list entries
Attachments
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2026-03-20 10:28:25 PDT
<
rdar://problem/161250444
>
Basuke Suzuki
Comment 2
2026-03-20 10:28:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61019
EWS
Comment 3
2026-03-20 21:40:55 PDT
Committed
309666@main
(6c3c6413ec83): <
https://commits.webkit.org/309666@main
> Reviewed commits have been landed. Closing PR #61019 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug