[Site Isolation] Dynamically created cross-site iframes should not add back/forward list entries https://bugs.webkit.org/show_bug.cgi?id=310369 rdar://161250444

Reviewed by Brady Eidson.

When a dynamically created iframe (still at about:blank) navigates to a
cross-site URL under site isolation, it was creating a duplicate
back/forward list entry. This happened because isPendingInitialHistoryItem
was only set for isInitialFrameSrcLoad navigations (<iframe src="...">),
not for iframes navigated from about:blank via JavaScript.

The fix adds isShowingInitialAboutBlank state to WebFrameProxy, which is
initialized to true and cleared on the first non-about:blank commit. This
is used alongside isInitialFrameSrcLoad to determine whether a frame's
first cross-site navigation should be registered as a child item in the
back/forward list tree rather than creating a new entry.

Test: http/tests/site-isolation/history/dynamic-cross-site-iframe-does-not-add-history-entry.html

* LayoutTests/http/tests/site-isolation/history/dynamic-cross-site-iframe-does-not-add-history-entry-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/history/dynamic-cross-site-iframe-does-not-add-history-entry.html: Added.
* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didCommitLoad):
* Source/WebKit/UIProcess/WebFrameProxy.h:
(WebKit::WebFrameProxy::isShowingInitialAboutBlank const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):
(WebKit::WebPageProxy::resetState):
(WebKit::WebPageProxy::resetStateAfterProcessExited):

Canonical link: https://commits.webkit.org/309666@main